feat(dlt645): restore server mode on SPI3 tcp-server transport
Migrate the fork-local DL/T 645 server mode (reverse TCP, meters connect
to PLC4X) from SPI2 to SPI3:
- Dlt645ServerDriver extends DriverBase (protocol dlt645-server, transport
  tcp-server), mirroring ModbusTcpServerDriver
- Dlt645ServerConnection extends PollingSubscriptionConnectionBase, binds
  TcpServerChannelRegistry on connect, getDeviceConnection(deviceId) lazy-
  creates/caches per-device sub-connections, device events retained
- Dlt645DeviceConnection extends Dlt645Connection, constructed with the
  target device's TcpServerTransportInstance as its transport - requests
  flow directly to that meter, clean tags (no device-id)
- Dlt645ServerConfiguration extends Dlt645Configuration + target-device-id/
  device-timeout; deleted Dlt645ServerProtocolLogic and DriverContext
- pom: drop compiler exclude, add tcp-server dep; services registered
- Self-check: meter register → event → getDeviceConnection → read address
  123456789012 + energy 123.0 kWh, ALL PASSED